[gd_scene load_steps=2 format=3 uid="uid://dy8v87qarfpsa"]

[ext_resource type="Script" uid="uid://bpf1xhosk1jcu" path="res://source/UI/paused_menu/pause_menu.gd" id="1_em2ix"]

[node name="pause_menu" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_em2ix")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.290196)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="resume_game" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="main_menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Menu"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save & Quit"

[node name="settings" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -62.5
offset_right = 208.0
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="settings/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="music_vol" type="HSlider" parent="settings/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.025

[node name="Label2" type="Label" parent="settings/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="sfx_volume" type="HSlider" parent="settings/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.025

[node name="back_to_paused" type="Button" parent="settings/VBoxContainer"]
layout_mode = 2
text = "Back to Paused Menu"

[connection signal="button_up" from="VBoxContainer/resume_game" to="." method="_on_resume_game_button_up"]
[connection signal="button_up" from="VBoxContainer/settings" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="VBoxContainer/main_menu" to="." method="_on_main_menu_button_up"]
[connection signal="button_up" from="VBoxContainer/quit" to="." method="_on_quit_button_up"]
[connection signal="drag_ended" from="settings/VBoxContainer/music_vol" to="." method="_on_music_vol_drag_ended"]
[connection signal="drag_ended" from="settings/VBoxContainer/sfx_volume" to="." method="_on_sfx_volume_drag_ended"]
[connection signal="button_up" from="settings/VBoxContainer/back_to_paused" to="." method="_on_back_to_paused_button_up"]
